# adventofcode

./: .dir-locals.el  LICENSE  pyproject.toml
2015/: setup.cfg
2015/src/: day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_08.py  day_09.py  day_10.py  day_11.py  day_12.py  day_13.py  day_14.py  day_15.py  day_16.py  day_17.py  day_18.py  day_19.py  day_20.py  day_21.py  day_22.py  day_23.py  day_24.py  day_25.py
2016/: .envrc  Pipfile
2016/src/: day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_08.py  day_09.py  day_10.py  day_11.py  day_12.py  day_13.py  day_14.py  day_15.py  day_16.py  day_17.py  day_18.py  day_19.py  day_20.py  day_21.py  day_22.py  day_23.py  day_24.py  day_25.py
2017/: pyproject.toml
2017/src/: cartesian.py  day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_08.py  day_09.py
2018/src/: day_01.py  day_02.py  day_03.py  (+3 more)
2020/: 01-a.hs  01-b.hs  01-b.py  01.py  02-b.py  02.py  03-a.py  03-b.py  04-a.py  04-b.py  05-a.py  05-b.py  06-a.py  06-b.py  07-a.py  07-b.py  08-a.py  08-b.py  09-a.py  09-b.py  10-a.py  10-b.py  11-a.py  11-b.py  12-a.py  12-b.py  13-a.py  13-b.py  14-a.py  14-b.py  15-a.py  15-b.py  16-a.py  16-b.py  17-a.py  17-b.py  18-a.py  18-b.py  19.py  20.py  (+5 more)
2021/: Pipfile
2022/: .envrc  Pipfile  package.json
2023/: .flake8  Pipfile
2024/: Pipfile
2025/: pyproject.toml
2025/src/: cartesian.py  day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_08.py  day_09.py  day_10.py  day_11.py  day_12.py
(+119 files in other folders)
