[project]
name = "2017"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "pylsp-mypy>=0.7.0",
    "pytest>=8.3.5",
    "pytest-watcher>=0.4.3",
    "python-lsp-ruff>=2.2.2",
    "python-lsp-server>=1.12.2",
    "ruff>=0.11.7",
]

[tool.pytest-watcher]
now = true
