[project]
name = "2017"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "z3-solver>=4.15.4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-watcher>=0.4.3",
    "ruff>=0.11.7",
]

[tool.pytest-watcher]
now = true
